--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@
   --ff-2: "Roboto", sans-serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 *,
 ::after,
 ::before {
@@ -25,12 +29,19 @@
 body {
   font-family: var(--ff-2);
   color: var(--clr-font-1);
-  font-size: 0.875rem;
+  font-size: 14px;
 }
 
 a {
+  font-family: var(--ff-2);
   text-decoration: none;
-  color: inherit;
+  color: var(--clr-font-1);
+  font-weight: 500;
+  line-height: 1.143;
+}
+
+ul {
+  list-style: none;
 }
 
 h2,
@@ -44,43 +55,57 @@ li {
 
 /*header*/
 
-header,
-.header-main {
+.header {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-}
-
-header {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--clr-font-3);
   border-bottom: 1px solid #ececec;
 }
 
-.header-main {
-  height: 80px;
-}
-
 .header-logo {
   font-family: var(--ff-1);
-  font-size: 1.625rem;
+  font-size: 26px;
   font-weight: 700;
   line-height: 1.2;
   margin-right: 93px;
+  letter-spacing: 0.03em;
 }
 
 .header-web {
   color: var(--clr-active-1);
 }
 
-.header-btn {
+.header-nav {
+  display: flex;
   font-weight: 500;
-  display: inline-block;
+}
+
+.header-btn {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+}
+
+.header-btn:not(:last-child),
+.header-contact-item:not(:last-child) {
   margin-right: 50px;
+}
+
+.header-contacts {
+  display: flex;
+  margin-left: auto;
 }
 
 .header-contact {
   color: var(--clr-font-2);
-  margin-left: 50px;
+  letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-contact:hover,
@@ -89,7 +114,7 @@ header {
   color: var(--clr-active-1);
 }
 
-/* section one*/
+/* section one */
 
 .section-one {
   background-color: var(--clr-background-1);
@@ -97,8 +122,12 @@ header {
   height: 600px;
   text-align: center;
   font-weight: 900;
-  font-size: 2.75rem;
+  font-size: 44px;
+  line-height: 1.36;
   padding-top: 200px;
+
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .section-button {
@@ -110,10 +139,9 @@ header {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 700;
   line-height: 1.8;
-  letter-spacing: 0.06em;
 }
 
 .section-button:hover {
@@ -127,10 +155,13 @@ header {
   list-style: none;
   justify-content: center;
   margin: 94px auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .list-item {
-  width: 270px;
+  width: calc((100%-90px) / 4);
 }
 
 .list-item:not(:last-child) {
@@ -138,32 +169,43 @@ header {
 }
 
 .list-item h3 {
-  font-style: bold;
+  font-style: normal;
   text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
 }
 
 .list-item p {
-  line-height: 1.7;
+  line-height: 1.71;
   color: var(--clr-font-2);
   height: 75px;
   margin-top: 10px;
 }
 
-.section-two-heading {
+.section-two-heading,
+.section-three-heading {
   text-align: center;
-  font-size: 2rem;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.166;
   margin-bottom: 50px;
 }
 
 .section-two-images {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   margin-bottom: 94px;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.section-two-images img:not(:last-child) {
+.section-two-images li {
+  height: 294px;
+}
+
+.section-two-images li:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -171,45 +213,47 @@ header {
 
 .section-three {
   background-color: var(--clr-background-2);
-}
-
-.section-three-heading {
-  text-align: center;
+  padding-bottom: 94px;
   padding-top: 94px;
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1.3;
 }
 
 .section-three-container {
   display: flex;
-  justify-content: center;
   margin-top: 50px;
-  padding-bottom: 94px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.section-three-container figure:not(:last-child) {
-  margin-right: 30px;
-}
-
-.section-three-container figure {
-  width: 270px;
+.section-three-item {
+  width: calc((100% - 90px) / 4);
+  text-align: center;
+  font-size: 16px;
+  padding-bottom: 30px;
+  line-height: 1.187;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.section-three-fig h4 {
+.section-three-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.section-three-item img {
+  display: block;
+}
+
+.section-three-item h3 {
   margin-top: 30px;
-  text-align: center;
-  font-size: 1rem;
   font-weight: 500;
 }
 
-.section-three-fig p {
-  padding-top: 10px;
-  padding-bottom: 30px;
-  text-align: center;
+.section-three-item p {
+  margin-top: 10px;
+  font-weight: 400;
   color: var(--clr-font-2);
 }
 
@@ -218,30 +262,47 @@ header {
 footer {
   height: 252px;
   background-color: var(--clr-background-1);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-container {
-  padding-top: 60px;
-  padding-left: 215px;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-logo {
+  display: block;
   font-family: var(--ff-1);
   font-family: 700;
-  font-size: 1.625rem;
+  font-size: 26px;
+  line-height: 1.192;
+  margin-bottom: 20px;
   color: var(--clr-font-3);
 }
 
-.footer-adress {
+.footer-address {
+  line-height: 1.71;
+  font-weight: 400;
+}
+
+.footer-street {
   color: var(--clr-font-3);
-  margin-top: 20px;
   margin-bottom: 9px;
+  line-height: 1.71;
+  font-weight: 400;
 }
 
 .footer-contact {
   color: var(--clr-font-4);
-  line-height: 1.7;
-  display: block;
+  line-height: 1.71;
+  font-weight: 400;
+}
+
+.footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
