--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,6 @@ li {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--clr-font-3);
-  border-bottom: 1px solid #ececec;
 }
 
 .header-logo {
@@ -308,26 +307,34 @@ footer {
 
 /* Portfolio items */
 
-.main-filter-buttons {
-  display: flex;
-  padding-top: 100px;
-  justify-content: center;
-  margin-bottom: 50px;
+main {
+  padding-bottom: 94px;
+}
+
+.main-buttons-container {
+  border-top: 1px solid #ececec;
   padding-top: 94px;
 }
 
+.main-filter-buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .main-button {
+  font-family: var(--ff-2);
   background-color: var(--clr-background-2);
-  font-size: 1rem;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.625;
   font-weight: 500;
   border: none;
   border-radius: 4px;
   padding: 6px 22px;
 }
 
-.main-button:not(:last-child) {
-  margin-right: 15.3px;
+.main-filter-buttons li:not(:last-child) {
+  margin-right: 8px;
 }
 
 .main-button:hover,
@@ -338,32 +345,50 @@ footer {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* portfolio items */
-
-.main-items {
-  display: grid;
-  grid-template-columns: repeat(3, 370px);
-  gap: 30px 30px;
-  justify-content: center;
-  padding-bottom: 94px;
+.main-item-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .item {
   height: 404px;
+  width: calc((100% - 60px) / 3);
   background-color: var(--clr-font-3);
   border: 1px solid #eeeeee;
+  margin-bottom: 30px;
 }
 
-.item-description h4 {
-  font-size: 1.125rem;
+.item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.item img {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.item h3 {
+  font-size: 18px;
   line-height: 2;
   font-weight: 700;
   letter-spacing: 0.06em;
-  padding: 20px 24px 4px;
+  margin-left: 24px;
+  margin-bottom: 4px;
 }
-.item-description p {
+.item p {
   color: var(--clr-font-2);
-  font-size: 1rem;
-  line-height: 1.8;
-  padding: 0 24px 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.88;
+  margin-left: 24px;
+  margin-bottom: 20px;
 }
