--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,8 @@ li {
   font-weight: 500;
 }
 
-.header-btn {
+.header-btn,
+.header-btn a {
   padding-top: 32px;
   padding-bottom: 32px;
   letter-spacing: 0.02em;
@@ -122,7 +123,7 @@ li {
 }
 
 .header-contact:hover,
-.header-btn:hover,
+.header-btn a:hover,
 .footer-contact:hover {
   color: var(--clr-active-1);
 }
@@ -163,13 +164,19 @@ li {
 
 /* section two */
 
+.section-two {
+  margin-top: var(--section-margin);
+}
+
+.section-two + .section-two {
+  padding-bottom: var(--section-margin);
+}
+
 .section-two ul {
   display: flex;
   flex-basis: calc((100%-90px) / 4);
   list-style: none;
   justify-content: center;
-  margin-top: var(--section-margin);
-  margin-bottom: var(--section-margin);
 }
 
 .list-item:not(:last-child) {
@@ -203,7 +210,7 @@ li {
 .section-two-images {
   display: flex;
   /* justify-content: center; */
-  margin-bottom: var(--section-margin);
+  /* margin-bottom: var(--section-margin); */
 }
 
 .section-two-images li:not(:last-child) {
@@ -279,7 +286,6 @@ footer {
 
 .footer-street {
   color: var(--clr-font-3);
-  margin-bottom: 9px;
   line-height: 1.71;
   font-weight: 400;
 }
