--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ li {
 
 .section-three-item h3 {
   margin-top: var(--section-margin-2);
+  font-size: inherit;
   font-weight: 500;
 }
 
@@ -384,7 +385,6 @@ footer {
   letter-spacing: 0.06em;
   margin-left: 24px;
   margin-bottom: 4px;
-  text-transform: uppercase;
 }
 
 .item p {
